# simde

./: .appveyor.yml  .travis.yml  meson.build
.github/workflows/: ci.yml
codegen/: testgen.fasl  testgen.lisp
simde/: simde-features.h
simde/arm/: neon.h
simde/arm/neon/: float32x2.h  float32x4.h  float64x1.h  float64x2.h  int16x4.h  int16x8.h  int32x2.h  int32x4.h  int8x16.h  int8x8.h  ld3.h  ld4.h  st3.h  st4.h  uint16x4.h  uint16x8.h  uint32x2.h  uint32x4.h  uint8x16.h  uint8x8.h
simde/x86/: avx512bw.h  avx512f.h  avx512vl.h  sse.h  sse2.h  ssse3.h
test/: CMakeLists.txt  declare-suites.h  meson.build  run-tests.c
test/arm-cross-build/: CMakeCache.txt  build.sh
test/arm/neon/: declare-suites.h  meson.build  results  st3.c  st4.c  test-neon-internal.h  test-neon.c  vaba.c  vabd.c  vabs.c
test/x86/: avx512bw.c  avx512f.c  avx512vl.c  meson.build  sse.c  sse4.1.c
